--- a/Express/static/all.css
+++ b/Express/static/all.css
@@ -1,3 +1,42 @@
 *{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 0px;
+    padding: 0px;
+}
+
+h2{
+    text-align: center;
+    padding-top: 45px;
+    margin: auto;
+    background-color: rgb(80, 78, 77);
+    color: rgb(249, 241, 246);
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+}
+
+nav{
+    background-color: rgb(80, 78, 77);
+    padding: 3px 12px;
+}
+
+li{
+    list-style: none;
+    padding: 20px;
+}
+
+a{
+    text-decoration: none;
+
+}
+.cont{
+    padding: 30px;
+    margin: 35px auto;
+    text-align: center;
+    border: 4px solid darkgrey;
+    max-width: 50%;
+    color: rgb(44, 44, 41);
+    background-color: darkslategrey
 }
