--- a/Express/static/all.css
+++ b/Express/static/all.css
@@ -1,42 +1,105 @@
 *{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+
 }
 
-h2{
+.fst{
+    background-image: url('weight-workout.webp');
+    background-repeat: no-repeat;
+    background-position: center center;
+
+    padding:45px;
+
     text-align: center;
-    padding-top: 45px;
-    margin: auto;
-    background-color: rgb(80, 78, 77);
-    color: rgb(249, 241, 246);
-}
+    color: rgb(176, 218, 86);
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 75px;
 
-ul{
     display: flex;
-    flex-direction: row;
+    justify-content: center;
+    align-items: center;
 }
+.navbar{
+    background-color:rgb(14, 14, 14);
+    border-top: 7px solid rgb(64, 41, 13);
+    border-left: 7px solid rgb(135,92,39);
+    border-right: 7px solid rgb(135,92,39);
+    border-bottom: 7px solid rgb(64, 41, 13);
+    border-radius: 20px;
 
-nav{
-    background-color: rgb(80, 78, 77);
-    padding: 3px 12px;
-}
-
-li{
-    list-style: none;
-    padding: 20px;
-}
-
-a{
-    text-decoration: none;
-
-}
-.cont{
+    margin: 0px;
     padding: 30px;
-    margin: 35px auto;
+
+    /* box-sizing: border-box; */
+    
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.navbar ul li{
+    list-style: none;
+    float: left;
+    text-decoration: solid;
+}
+
+.navbar a{
+    text-decoration: none;
+    padding: 130px;
+}
+
+.navbar button{
+    color:aliceblue;
+    font-size: 19px;
+    background-color: rgb(14, 14, 14);
+    border: 2px solid rgb(14, 14, 14);
+    font-weight: bold;
+    cursor:pointer;
+}
+
+.navbar a button :hover{
+    background-color: aquamarine;
+}
+
+.form-section {
+    padding: 20px;
+    margin: 30px auto;
+    width: 90%;
+    max-width: 400px;
+    background-color: #ffffff;
+    border: 1px solid #ccc;
+}
+
+.form-section h2 {
     text-align: center;
-    border: 4px solid darkgrey;
-    max-width: 50%;
-    color: rgb(44, 44, 41);
-    background-color: darkslategrey
+    margin-bottom: 20px;
+    font-size: 24px;
+}
+
+.form-section label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
+
+.form-section input {
+    width: 100%;
+    padding: 8px;
+    margin-bottom: 15px;
+    border: 1px solid #888;
+}
+
+.form-section button {
+    width: 100%;
+    padding: 10px;
+    background-color: black;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.form-section button:hover {
+    background-color: gray;
 }
