--- a/js/apis/Cook/style.css
+++ b/js/apis/Cook/style.css
@@ -1,4 +1,45 @@
 body{
-    background-color: black;
-    color: aliceblue;
+    background-color: rgb(184, 232, 236);
+    color: rgb(0, 2, 4);
+    font-family:cursive;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    min-height: 100vh;
+    margin: 0;
+    padding: 2rem 1rem;
+    box-sizing: border-box;
+}
+
+.dish_enter{
+    color:rgb(150, 144, 220);
+    font-weight: bolder;
+}
+
+.input_dish{
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 20px;
+
+    border: 2px solid rgb(150, 144, 220);
+    border-radius: 6px;
+    color:rgb(150, 144, 220);
+}
+
+.search{
+    background-color: rgb(150, 144, 220);
+    color: rgb(184, 232, 236);
+
+    padding-top: 0.6%;
+    padding-bottom: 0.6%;
+    padding-left: 17px;
+    padding-right: 17px;
+
+    text-align: center;
+    font-weight: bolder;
+
+    border: 3px solid rgb(16, 188, 203);
+    border-radius: 15%;
 }
