--- a/react/react_project_two/src/index.css
+++ b/react/react_project_two/src/index.css
@@ -12,6 +12,6 @@ body{
   justify-content: center;
   align-items: center;
 
-  background-color: cadetblue;
+  background-color: rgb(41, 1, 66);
   color: aliceblue;
 }
